#
# AlcoTools - Alcoholicz dupe checker, zipscript, and utilities.
# Copyright (c) 2005-2006 Alcoholicz Scripting Team
#
# Module Name:
#   Configure
#
# Author:
#   neoxed (neoxed@gmail.com) Oct 30, 2005
#
# Abstract:
#   Autoconf template.
#

# Set up autoconf.
AC_PREREQ(2.59)
AC_INIT([AlcoTools],[0.1])
AC_CONFIG_SRCDIR([source/alcoCommon.h])
AC_CONFIG_HEADER([config.h])

AC_PREFIX_DEFAULT([/glftpd])
AC_PROG_MAKE_SET()
AC_PROG_INSTALL()

# Check for a C compiler and its characteristics.
AC_PROG_CC
AC_LANG_C
AC_C_CONST
AC_C_INLINE
AC_C_VOLATILE
AC_C_BIGENDIAN(
    AC_DEFINE([BIG_ENDIAN],    1, [Define if the host's byte-order is big endian.]),
    AC_DEFINE([LITTLE_ENDIAN], 1, [Define if the host's byte-order is little endian.]),
)

# Check for required headers.
AC_HEADER_DIRENT
AC_CHECK_HEADERS([inttypes.h memory.h stdint.h string.h strings.h time.h unistd.h wchar.h sys/time.h])
AC_CHECK_HEADERS([limits.h syslimits.h sys/limits.h])

# Check for library functions, structures, and types.
AC_CHECK_FUNCS([memcmp memcpy])
AC_FUNC_LSTAT
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_MMAP
AC_FUNC_VPRINTF
AC_STRUCT_TM
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T

AC_ARG_ENABLE(
    [debug],
    AS_HELP_STRING([--enable-debug], [enable debugging support]),
    [CFLAGS="$CFLAGS -g -DDEBUG"],
)

AC_OUTPUT([Makefile])
